[tool.poetry]
name = "telegram-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.17.1"
python-dotenv = "^1.0.0"
aiohttp = "^3.10.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
